# storage_delight

./: .clang-format  .env  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  components.d.ts  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json  vcpkg.json  vite.config.ts
.github/workflows/: cmake-single-platform.yml
application/: CMakeLists.txt  main.cpp
application/res/: resource.qrc
application/res/theme/: CatppuccinFrappe.json  CatppuccinLatte.json  CatppuccinMacchiato.json  CatppuccinMocha.json
application/src/: app.cpp  main.cpp  theme_provider.cpp  theme_provider.hpp
application/src/schema/: theme.hpp
application/ui/: Main.qml  src_ui.qrc
application/ui/Layout/: Login.qml
application/ui/Theme/: CatppuccinFrappe.qml  CatppuccinLatte.qml  CatppuccinMacchiato.qml  CatppuccinMocha.qml  ThemeProvider.qml
core/: CMakeLists.txt
core/include/: base_operation.hpp  basic_types.hpp  bucket_operation.hpp  client.hpp  hello.hpp  object_operation.hpp
core/src/: base_operation.cpp  bucket_operation.cpp  client.cpp  hello.cpp  object_operation.cpp
doc/: Cloudvl.openapi.json  api.md  project_introduction.md  requirement_analysis.md  storage_delight_design.excalidraw  temp.txt
doc/uml/: class-diagram.plantuml  functional_structure.puml  sequence-diagram.plantuml  use_case.puml
server/: CMakeLists.txt  config.json5  config.yaml  default_config.json  main.cc
server/controllers/: api_bucket.cc  api_bucket.h  api_group.cc  api_group.h  api_hello.cc  api_hello.h  api_object.cc  api_object.h  api_storage_source.cc  api_storage_source.h  api_user.cc  api_user.h
server/filters/: admin_auth.cpp  admin_auth.hpp  bucket_exist.cpp  bucket_exist.hpp  group_exist.cpp  group_exist.hpp  group_owner.cpp  group_owner.hpp  source_exist.cpp  source_exist.hpp  user_exist.cpp  user_exist.hpp  user_filter.cpp  user_filter.hpp
server/models/: base_response.cpp  base_response.hpp  basic_value.hpp  db_schema.cpp  db_schema.hpp  drogon_specialization.hpp  http_response.cpp  http_response.hpp  nlohmann_json_request.hpp  nlohmann_json_response.hpp  schema_format.cpp  schema_format.hpp  schema_key.hpp  type.hpp  user_request.cpp  user_request.hpp  user_response.cpp  user_response.hpp
server/service/: bucket_service.cpp  bucket_service.hpp  group_service.cpp  group_service.hpp  log_service.cpp  log_service.hpp  logger.cpp  logger.hpp  mongo_service.cpp  mongo_service.hpp  sqlite_service.cc  sqlite_service.h  storage_service.cpp  storage_service.hpp  user_service.cpp  user_service.hpp
server/test/: CMakeLists.txt
server/trantor/: certificate.pem  private.pem
server/utils/: date.h  exception_handler.cpp  exception_handler.hpp  format.h  item.h  response.h  singleton_prototype.hpp  string.cpp  string.h  string.hpp  string_encryption.h
src/: App.vue  main.ts
src/app/: globals.css  hooks.ts  layout.tsx  page.tsx
src/app/storageDelight/: page.tsx
src/app/storageDelight/bucket/manager/: page.tsx
src/app/storageDelight/index/: client.tsx  page.tsx
src/app/storageDelight/login/: loginForm.tsx  page.css  page.tsx
src/app/storageDelight/register/: page.css  page.tsx  registerForm.tsx
src/app/ui/: page.tsx
src/app/ui/storageDelight/: client.tsx  page.tsx
src/app/ui/template/: client.tsx  page.tsx
src/app/ui/test/: client.tsx  page.tsx
src/app/ui/todolist/: client.tsx  page.tsx
src/assets/scss/: init.scss  main.scss
src/assets/scss/common/: common.scss  uploadInput.scss
src/assets/scss/mixin/: mixin.scss
src/assets/scss/mixin/common/: uploadInputMixin.scss
src/components/: template.vue
src/components/storageDelight/Header/: index.tsx
src/components/storageDelight/WebFooter/: index.tsx
src/components/storageDelight/WebHeader/: index.css  index.tsx
src/components/storageDelight/WebLayout/: index.tsx
src/components/storageDelight/WebSider/: index.tsx
src/components/todolist/: Header.tsx
src/lib/: typs.ts
src/plugins/libs/: alova_lib.ts  base_lib.ts  captcha_lib.ts  color_lib.ts  common_lib.ts  cookie_lib.ts  date_lib.ts  dom_lib.ts  file_lib.ts  string_lib.ts  template_lib.ts  uuid_lib.ts
src/router/: routers.ts  web.ts
src/router/sub/: auth.ts  index.ts
src/store/: store.ts
src/store/demoTemplate/: globalSlice.ts  template.ts
src/store/features/: counterSlice.ts  template.ts  userSlice.ts
src/store/modules/: user.ts  userInfo.ts
src/store/reducers/: global.ts  layout.ts  root.ts
src/styles/: global.css
src/types/: loginInfo.ts  registerInfo.ts
src/types/requests/: requestCustom.d.ts
src/types/user/: user.d.ts  userInfo.d.ts
src/utils/: alova.ts
src/views/: index.vue
src/views/auth/: forgepassword.vue  login.vue  register.vue
storage_server/: CMakeLists.txt  main.cc
